meshcentral/manifests/meshcentral-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meshcentral
  namespace: ${MESH_NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: meshcentral
  ports:
    - name: https
      port: ${MESH_SERVICE_PORT}
      targetPort: 4430
