meshcentral/manifests/meshcentral-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meshcentral-route
  namespace: ${MESH_NAMESPACE}
spec:
  parentRefs:
    - name: johnkoepp-com-gateway
      namespace: infrastructure
      sectionName: https
      port: 443
  hostnames: ["${MESH_HOSTNAME}"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Forwarded-Host
                value: ${MESH_HOSTNAME}
              - name: X-Forwarded-Port
                value: "443"
      backendRefs:
        - name: meshcentral
          namespace: ${MESH_NAMESPACE}
          port: ${MESH_SERVICE_PORT}
      timeouts:
        request: "900s"
        backendRequest: "600s"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meshcentral-redirect
  namespace: ${MESH_NAMESPACE}
  labels:
    koeppster.net/aws_common_name: ${MESH_HOSTNAME}
    koeppster.net/aws_status: waiting
spec:
  parentRefs:
    - name: johnkoepp-com-gateway
      namespace: infrastructure
      sectionName: http
      port: 80
  hostnames: ["${MESH_HOSTNAME}"]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
